[package]
name = "tor-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Francisco Braço-Forte <f.s.f.b2001@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/franciscosbf/tor-proxy"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
thiserror = "2.0.12"
hyper = { version = "1.6.0", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.14", features = ["tokio"] }
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
arti-client = { version = "0.31.0", features = ["bridge-client"] }
tor-proto = { version = "0.31.0", features = ["stream-ctrl"] }
tor-rtcompat = { version = "0.31.0", features = ["native-tls", "tokio"] }
tokio = { version = "1.45.1", features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "fs",
  "net",
  "macros",
  "signal",
] }
governor = "0.10.0"
itertools = "0.14.0"
safelog = "0.4.6"
bytesize = "2.0.1"
moka = { version = "0.12.10", features = ["future"] }
